--- a/style.css
+++ b/style.css
@@ -5,11 +5,7 @@
     --desaturated-red: hsl(0, 36%, 70%);
     --soft-red: hsl(0, 93%, 68%);
     --dark-grayish-red: hsl(0, 6%, 24%);
-
-    /* gradients */
 }
-
-/*- Linear, 135deg, from hsl(0, 0%, 100%), to hsl(0, 100%, 98%)*/
 
 html {
     box-sizing: border-box;
@@ -20,17 +16,17 @@ html {
     box-sizing: inherit;
     margin: 0;
     padding: 0;
-    /*border: 1px solid black;*/
 }
 
 article {
     height: 100vh;
 }
 
-.logo-container {
+.logo {
     position: absolute;
     left: var(--horizontal-margin);
     top: 8%;
+    width: 158px;
 }
 
 picture {
@@ -39,7 +35,7 @@ picture {
     max-width: 50%;
 }
 
-img {
+.hero-image {
     height: inherit;
     width: 100%;
     object-fit: cover;
@@ -61,6 +57,7 @@ h1 {
     font-weight: 600;
     letter-spacing: 0.8rem;
     color: var(--dark-grayish-red);
+    text-transform: uppercase;
 }
 
 h1 span {
@@ -73,11 +70,11 @@ p {
     line-height: 1.8rem;
 }
 
-p, .input-container {
+p, #form {
    max-width: 500px;
 }
 
-.input-container {
+#form {
     --input-size: 3.5rem;
     --message-space: 2rem;
     --input-padding: 2rem;
@@ -88,19 +85,31 @@ p, .input-container {
     margin-bottom: var(--message-space);
 }
 
-#email {
+.email {
    width: 100%;
-   color: var(--desaturated-red);
    font-size: 1rem;
-   border: 1px solid var(--desaturated-red);
+   border: 1px solid rgba(206, 150, 150, 0.5);
    padding-left: var(--input-padding);
 }
 
-#email:focus {
-    outline: 1px solid var(--desaturated-red);
+.email-error{
+    border: 1px solid var(--soft-red);
 }
 
-#email, #submit-button {
+.email:focus {
+    outline: 1px solid rgba(206, 150, 150, 0.5);
+}
+
+.email-error:focus {
+    outline: 1px solid var(--soft-red);
+}
+
+::placeholder {
+    color: var(--desaturated-red);
+    opacity: 0.5;
+}
+
+.email, #submit-button {
     height: var(--input-size);
     border-radius: var(--input-size);
 }
@@ -121,15 +130,17 @@ p, .input-container {
 
 #validation-message {
     position: absolute;
-    display: none;
     line-height: var(--message-space);
     padding-left: var(--input-padding);
     color: var(--soft-red);
 }
 
-#error-icon {
-    position: absolute;
+.invisible {
     display: none;
+}
+
+.error-icon {
+    position: absolute;
     bottom: 50%;
     translate: 0 50%;
     right: calc(var(--button-size) + 1rem);
@@ -159,7 +170,7 @@ p, .input-container {
 }
 
 @media (max-width: 700px) {
-    .logo-container {
+    .logo {
         top: 35px;
     }
 
@@ -169,7 +180,7 @@ p, .input-container {
         height: 30vh;
     }
 
-    img {
+    .hero-image {
         object-position: 50% 0;
         margin-top: 100px;
     }
